# ddrift-rs

./: Cargo.toml  README.md
src/: constants.rs  export.rs  lib.rs
src/baseline/: arrow.rs  categorical.rs  continuous.rs  ddrift_arrow.rs  mod.rs  table.rs
src/constants/: drift_thresholds.rs  mod.rs
src/contract/: categorical.rs  continuous.rs  drift_check.rs  mod.rs
src/core/: bin_edges.rs  dataset_view.rs  ddrift_arrow.rs  distribution.rs  drift_metrics.rs  error.rs  mod.rs  opt.rs
src/ddrift_arrow/: candidate.rs  mod.rs  schema_view.rs  slice_impl.rs  string_slice.rs
src/drift/: categorical.rs  continuous.rs  mod.rs  stream_mode.rs
src/drift/discrete/: categorical.rs  continuous.rs  mod.rs
src/drift/streaming/: categorical.rs  continuous.rs
src/drift_types/: categorical.rs  constants.rs  continuous.rs  mod.rs
src/table/: candidate.rs  candidate_drift.rs  datatypes.rs  mod.rs  schema_view.rs  slice_impl.rs
