[package]
name = "ddrift"
version = "0.1.0"
edition = "2024"



[dependencies]
ahash = "0.8.12"
arrow = {version = "58.3.0", optional = true}
num-traits = "0.2.19"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.18"

[features]
default = ["arrow"]
arrow = ["dep:arrow"]
